--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,13 @@
   padding: 0;
 }
 
-.ff-inter { font-family: 'Inter', sans-serif; }
-.ff-roboto-mono { font-family: 'Roboto Mono', monospace; }
+.ff-inter {
+  font-family: 'Inter', sans-serif;
+}
+
+.ff-roboto-mono {
+  font-family: 'Roboto Mono', monospace;
+}
 
 h1 {
   position: absolute;
@@ -54,24 +59,36 @@ h2 {
 
 @media (min-width: 576px) {
   .container {
-      width: 540px;
+    width: 540px;
   }
 }
 
 @media (min-width: 768px) {
   .container {
-      width: 720px;
+    width: 720px;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-      width: 960px;
+    width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-      width: 1140px;
+    width: 1140px;
   }
+}
+
+.botao__desabilitado {
+  background: #7A7F87;
+  color: #FFFFFF;
+  max-width: 270px;
+  width: 250px;
+  padding: 1rem;
+  margin: 0 auto;
+  border: 2px solid #C4C4C4;
+  border-radius: 10px;
+  transition: 0.5s ease;
 }
