--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.css
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.css
@@ -3,18 +3,14 @@
     justify-content: flex-end
 }
 
-.botao-excluir {
+.botao-editar,
+.botao-excluir,
+.botao-excluir,
+.botao-favorito {
     border: none;
     cursor: pointer;
-    margin-left: 5px;
-    margin-top: 10px;
-}
-
-.botao-editar {
-    border: none;
-    cursor: pointer;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin-right: 5;
+    margin-top: 15;
 }
 
 .pensamento {
