--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -4,12 +4,16 @@
             <input type="search" class="filtro" placeholder="O que você procura?" autofocus [(ngModel)]="filtro" (keyup)="pesquisarPensamentos()">
             <img src="../../../../assets/imagens/lupa.png" alt="Lupa">
         </div>
-        <h2 class="ff-inter">Meu Mural</h2>
-        <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
+        <h2 class="ff-inter">{{ titulo }}</h2>
+        <div class="botoes">
+            <button class="botao" (click)="recarregarComponente()">Listar todos pensamentos</button>
+            <button class="botao" (click)="listarFavoritos()">Meus favoritos</button>
+            <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
+        </div>
     </header>
     <div class="mural" *ngIf="pensamentos.length > 0, else semPensamentos">
         <div *ngFor="let pensamento of pensamentos">
-            <app-pensamento [pensamento]="pensamento"></app-pensamento>
+            <app-pensamento [pensamento]="pensamento" [listaFavoritos]="listaFavoritos"></app-pensamento>
         </div>
     </div>
 </section>
